@@ -1693,6 +1693,17 @@
       </component>
     </version>
   </module>
+  <module name="hydrogen">
+    <version release="gnome-2.8">
+      <component name="hydrogen" dir="hydrogen" group="extras">
+	<podir dir="po"/>
+	<potname name="hydrogen-1.0.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="jamboree">
     <version release="gnome-2.8">
       <component name="jamboree" dir="jamboree" group="extras">
