@@ -1,3 +1,7 @@
+2004-06-21  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added hydrogen to extras.
+
 2004-06-17  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: metacity has been branched.
